# clify

./: Cargo.toml  README.md
.github/workflows/: ci.yml  release.yml
crates/clify-cli/: Cargo.toml
crates/clify-cli/src/: main.rs  tui.rs
crates/clify-core/: Cargo.toml
crates/clify-core/src/: generator.rs  lib.rs  scanner.rs  schema.rs  skills.rs  spec.rs  validator.rs
crates/clify-core/templates/: Cargo.toml.hbs
crates/clify-runtime/: Cargo.toml
crates/clify-runtime/src/: auth.rs  client.rs  config.rs  lib.rs  output.rs
docs/: CLIFY-SPEC.md
examples/: example-arcgis-server.clify.yaml
schema/: clify-spec.schema.json
skills/clify/: SKILL.md
