[package]
name = "clify-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Core library for Clify — spec parsing, validation, and code generation"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"
schemars = "0.8"
thiserror = "2"
regex = "1"
handlebars = "6"
walkdir = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
openapiv3 = "2.2.0"

[dev-dependencies]
tempfile = "3"
