[package]
name = "clify-runtime"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Runtime library for Clify-generated CLIs — auth, HTTP client, output formatting"

[dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
comfy-table = "7"
csv = "1"
dirs = "6"
toml = "0.8"
thiserror = "2"
clap = { version = "4", features = ["derive"] }
